# LAB2

./: CMakeLists.txt
T1a/: addresses.c  hello  makefile
T1c/: hello  makefile  t1c.c
T1d/: exec  makefile  t1d.c
T2a/: makefile  t2a.c
T2b/: makefile  t2b.c
T2c/: makefile  t2c.c
T3/: exec  makefile  menu.c
task0/: count-words.c  hello  makefile
